--- a/source/manifest.json
+++ b/source/manifest.json
@@ -9,9 +9,15 @@
    "default_icon": "icon.png",
    "default_popup": "popup.html"
   },
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "all_frames": true,
+    "js":      ["content.js"]
+}],
   "permissions": [
    "activeTab",
    "webRequest",
-   "*://*.google.com/"
+   "*://*.google.com/",
+   "*://*.google.de/"
    ]
 }
