Implement main functionality and add example database

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -15,6 +15,7 @@
   "permissions": [
    "activeTab",
    "webRequest",
+   "webRequestBlocking",
    "*://*.google.com/*",
    "*://*.google.de/*"
    ]
