--- a/source/manifest.json
+++ b/source/manifest.json
@@ -7,7 +7,7 @@
 
   "browser_action": {
    "default_icon": "icon.png",
-   "default_popup": "popup.html"
+   "default_popup": "popup/popup.html"
   },
   "background": {
     "scripts": ["background.js"]
