[WIP] Add storage API

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -15,6 +15,7 @@
   "permissions": [
    "activeTab",
    "webRequest",
+   "storage",
    "webRequestBlocking",
    "*://*.google.com/*",
    "*://*.google.de/*"
