--- a/source/manifest.json
+++ b/source/manifest.json
@@ -6,7 +6,7 @@
   "version": "1.0",
 
   "browser_action": {
-   "default_icon": "icon.png",
+   "default_icon": "assets/icon.png",
    "default_popup": "popup/popup.html"
   },
   "background": {
