toggle icon color

--- a/source/manifest.json
+++ b/source/manifest.json
@@ -4,12 +4,12 @@
   "description": "This extension will eco-ify your browsing behaviour.",
   "version": "1.0",
   "icons": {
-    "16": "assets/icon.png",
-    "48": "assets/icon48.png",
-    "128": "assets/icon128.png"
+    "32": "assets/icon_on_32.png",
+    "48": "assets/icon_on_48.png",
+    "128": "assets/icon_on_128.png"
   },
   "browser_action": {
-    "default_icon": "assets/icon.png",
+    "default_icon": "assets/icon_on_48.png",
     "default_popup": "popup/popup.html"
   },
   "background": {
