--- a/source/manifest.json
+++ b/source/manifest.json
@@ -22,6 +22,7 @@
     "activeTab",
     "webRequest",
     "storage",
+    "unlimitedStorage",
     "webRequestBlocking",
     "*://*.google.com/*",
     "*://*.google.de/*"
