--- a/source/manifest.json
+++ b/source/manifest.json
@@ -25,6 +25,7 @@
     "unlimitedStorage",
     "webRequestBlocking",
     "*://*.google.com/*",
-    "*://*.google.de/*"
+    "*://*.google.de/*",
+    "https://5tepzfsmxg.execute-api.eu-central-1.amazonaws.com/*"
   ]
 }
