--- a/source/manifest.json
+++ b/source/manifest.json
@@ -18,6 +18,10 @@
       "background.js"
     ]
   },
+  "options_ui": {
+    "page": "options/options.html",
+    "open_in_tab": false
+  },
   "permissions": [
     "activeTab",
     "webRequest",
